--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Website sayang</title>
+    <title>Website Desa Bumi Sejahtera</title>
   </head>
   <body>
     <!--navbar-->
@@ -110,28 +110,19 @@
           <div class="carousel-item active c-item">
             <img src="img/foto4.jpg" class="d-block w-100 c-img" alt="slide1" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+              <h2>First slide label</h2>
             </div>
           </div>
           <div class="carousel-item c-item">
             <img src="img/foto2.jpg" class="d-block w-100 c-img" alt="slide2" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+              <h2>Second slide label</h2>
             </div>
           </div>
           <div class="carousel-item c-item">
             <img src="img/foto5.jpg" class="d-block w-100 c-img" alt="slide3" />
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+              <h2>Third slide label</h2>
             </div>
           </div>
         </div>
@@ -171,14 +162,15 @@
         <p>
           Secara geografis Desa Bumi Sejahtera merupakan wilayah bagian dari
           Kecamatan Kaliorang . Kabupaten Kutai Timur dan merupakan daerah
-          dataran rendah dengan batas-batas wilayah sebagai berikut : Sebelah
-          Utara : Desa Benua Baru ILIR. Kec. Sangkulirang Sebelah Timur : Desa
-          Maloy. Kec. Sangkulirang Sebelah Selatan : Desa Kaliorang. Kalorang
-          Sebelah Barat : Desa Citra Manunggal Jaya. Kec Kaliorang Secara
-          administratif Desa Bumi Sejahtera terdiri atas Dua ( 2) Dusun 13
-          .Rukun Tetangga. Jumlah Penduduk: 1322 jiwa/orang ( 392 KK), terdiri
-          atas: - Laki-laki : 700 jiwa/orang - Perempuan : 622 jiwa/orang
-          Masyarakat Desa Bumi Sejahtera sebagian besar memiliki mata
+          dataran rendah dengan batas-batas wilayah sebagai berikut :<br />
+          Sebelah Utara : Desa Benua Baru ILIR. Kec. Sangkulirang<br />
+          Sebelah Timur : Desa Maloy. Kec. Sangkulirang<br />
+          Sebelah Selatan : Desa Kaliorang. Kalorang<br />
+          Sebelah Barat : Desa Citra Manunggal Jaya.<br />
+          Kec Kaliorang Secara administratif Desa Bumi Sejahtera terdiri atas
+          Dua ( 2) Dusun 13 .Rukun Tetangga. Jumlah Penduduk: 1322 jiwa/orang (
+          392 KK), terdiri atas: - Laki-laki : 700 jiwa/orang - Perempuan : 622
+          jiwa/orang Masyarakat Desa Bumi Sejahtera sebagian besar memiliki mata
           pencaharian utama sebagai Petani dan pekebun.
         </p>
       </div>
@@ -377,8 +369,8 @@
             <h4 class="footer-judul">PEMERINTAHAN<br />Desa Bumi Sejahtera</h4>
             <hr />
             <p class="footer-p">
-              Assalamualaikum wr wb Yang terhormat sayangku cintaku mayang
-              cantik bahwa saya sedang membuat contoh saja ini
+              Website resmi desa bumi sejahtera, kecamatan kaliorang, kutai
+              timur, kalimantan timur
             </p>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 ms-auto d-inline">
@@ -414,7 +406,7 @@
         </div>
       </div>
       <hr />
-      <p class="m-2 text-center">copyright by ferry ganteng @2023</p>
+      <p class="m-2 text-center">copyright@2023</p>
     </footer>
 
     <script src="script.js"></script>
