--- a/pengumuman.html
+++ b/pengumuman.html
@@ -187,7 +187,7 @@
             class="text-bannner"
             style="position: absolute; display: block; top: 20%; color: black"
           >
-            <h1 style="font-weight: bold">Berita Desa</h1>
+            <h1 style="font-weight: bold">Informasi</h1>
             <nav>
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -203,7 +203,7 @@
                   Informasi
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Berita
+                  Pengumuman
                 </li>
               </ol>
             </nav>
@@ -212,123 +212,35 @@
       </div>
     </section>
 
-    <section class="berita my-5">
-      <div class="container">
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/voly.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/lomba-kegiatan-gerakan-penangganan-stunting-tk-"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Main Volly Dulu
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">rabu, 21 September 2022</p>
+    <section id="pengumuman" class="pengumuan-desa mb-100">
+      <div class="main mb-xlg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <h3 class="ttext-dark display-5 mb-5 mt-5">
+                <strong>Pengumuman</strong>
+              </h3>
+              <div class="row">
+                <div class="col-md-12 col-sm-12">
+                  <div class="alert alert-info">
+                    <p>
+                      <i class="fas fa-exclamation-triangle"></i>
+                      Saat ini kami tidak memiliki data "Pengumuman" untuk
+                      ditampilkan.
+                    </p>
+                  </div>
                 </div>
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  para warga desa bumi sejahtera sdang bermain volly
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
+              </div>
+              <script type="text/javascript">
+                $(document).ready(function () {});
+              </script>
             </div>
-          </div>
-        </div>
-
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/blt.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/pembagian-blt"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Pembagian BLT
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">Tuesday, 21 Juni 2021</p>
-                </div>
-
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  Pelaksanaan kegiatan pembagian BLT dari dana Desa bumi
-                  sejahtera
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
-            </div>
+            <div class="col-md-3 col-md-offset-1"></div>
           </div>
         </div>
       </div>
     </section>
+
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
