--- a/lembaga.html
+++ b/lembaga.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="owl.theme.default.css" />
+    <link rel="stylesheet" href="owl.carousel.min.css" />
+    <link rel="stylesheet" href="aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -18,6 +21,7 @@
 
     <title>Website Desa Bumi Sejahtera</title>
   </head>
+
   <body>
     <!--navbar-->
     <nav
@@ -187,7 +191,7 @@
             class="text-bannner"
             style="position: absolute; display: block; top: 20%; color: black"
           >
-            <h1 style="font-weight: bold">Berita Desa</h1>
+            <h1 style="font-weight: bold">Pemerintahan</h1>
             <nav>
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -198,12 +202,13 @@
                     ><i class="fa fa-home"></i
                   ></a>
                 </li>
-
-                <li class="breadcrumb-item active" style="color: black">
-                  Informasi
+                <li class="breadcrumb-item" aria-current="page">
+                  <a href="" class="text-decoration-none" style="color: black"
+                    >Pemerintahan</a
+                  >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Berita
+                  Lembaga desa
                 </li>
               </ol>
             </nav>
@@ -211,124 +216,161 @@
         </div>
       </div>
     </section>
-
-    <section class="berita my-5">
-      <div class="container">
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/voly.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/lomba-kegiatan-gerakan-penangganan-stunting-tk-"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Main Volly Dulu
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">rabu, 21 September 2022</p>
+    <section id="lembaga" class="lembaga-desa mb-100">
+      <div class="main mb-xlg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-primary text-center text-dark display-5 m-5">
+                <strong>Lembaga Desa</strong>
+              </h3>
+              <div class="row">
+                <div class="col-md-12 col-sm-12">
+                  <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th>Nama Lembaga</th>
+                        <th>Alamat Kantor</th>
+                        <th width="10%" class="text-center">&nbsp;</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/badan-permusyawaratan-desa-6202162006"
+                            >BADAN PERMUSYAWARATAN DESA</a
+                          >
+                          <br />
+                          <span class="label label-primary">BPD</span>
+                        </td>
+                        <td>
+                          <small
+                            >JL. BARITO RT 002 /RW 001 DESA BUKIT MAKMUR</small
+                          >
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.58.jpeg"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/karang-taruna-6202162006"
+                            >KARANG TARUNA</a
+                          >
+                          <br />
+                          <span class="label label-primary">KARANG TARUNA</span>
+                        </td>
+                        <td>
+                          <small></small>
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/themes/default/assets/images/no-photo.png"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/lembaga-pemberdayaan-masyarakat-desa-6202162006"
+                            >LEMBAGA PEMBERDAYAAN MASYARAKAT DESA</a
+                          >
+                          <br />
+                          <span class="label label-primary">LPMD</span>
+                        </td>
+                        <td>
+                          <small
+                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR
+                          </small>
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.16.jpeg"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/pemberdayaan-kesejahteraan-keluarga-6202162006"
+                            >PEMBERDAYAAN KESEJAHTERAAN KELUARGA</a
+                          >
+                          <br />
+                          <span class="label label-primary">PKK</span>
+                        </td>
+                        <td>
+                          <small>JL. BARITO RT 002 / RW 001</small>
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.54 - Copy 1.jpeg"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/rukun-tetangga-dan-rukun-warga-6202162006"
+                            >RUKUN TETANGGA DAN RUKUN WARGA</a
+                          >
+                          <br />
+                          <span class="label label-primary">RT DAN RW</span>
+                        </td>
+                        <td>
+                          <small
+                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR</small
+                          >
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_12_.07.jpeg"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <a
+                            href="http://bukitmakmur-kotim.desa.id/lembaga/detail/satuan-perlindungan-masyarakat-6202162006"
+                            >SATUAN PERLINDUNGAN MASYARAKAT</a
+                          >
+                          <br />
+                          <span class="label label-primary">LINMAS</span>
+                        </td>
+                        <td>
+                          <small
+                            >JL. BARITO RT 002/ RW 001 DESA BUKIT MAKMUR</small
+                          >
+                        </td>
+                        <td class="text-center">
+                          <img
+                            src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.33 - Copy 1.jpeg"
+                            style="height: 48px"
+                          />
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  para warga desa bumi sejahtera sdang bermain volly
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
+              </div>
+              <script type="text/javascript">
+                $(document).ready(function () {});
+              </script>
             </div>
-          </div>
-        </div>
-
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/blt.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/pembagian-blt"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Pembagian BLT
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">Tuesday, 21 Juni 2021</p>
-                </div>
-
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  Pelaksanaan kegiatan pembagian BLT dari dana Desa bumi
-                  sejahtera
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
-            </div>
+            <div class="col-md-3"></div>
           </div>
         </div>
       </div>
     </section>
+
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
