--- a/potensi-penduduk.html
+++ b/potensi-penduduk.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="owl.theme.default.css" />
+    <link rel="stylesheet" href="owl.carousel.min.css" />
+    <link rel="stylesheet" href="aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="http://bukitmakmur-kotim.desa.id/themes/default/assets/plugins/bootstrap/css/bootstrap.min.css"
+    />
+
+    <!-- Load jQuery -->
+    <script
+      type="text/javascript"
+      src="http://bukitmakmur-kotim.desa.id/themes/default/assets/plugins/jquery/jquery.min.js"
+    ></script>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -187,7 +201,7 @@
             class="text-bannner"
             style="position: absolute; display: block; top: 20%; color: black"
           >
-            <h1 style="font-weight: bold">Berita Desa</h1>
+            <h1 style="font-weight: bold">Potensi Desa</h1>
             <nav>
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -195,15 +209,12 @@
                     href="index.html"
                     class="text-decoration-none"
                     style="color: black"
-                    ><i class="fa fa-home"></i
-                  ></a>
+                    ><i class="fa fa-home"></i>
+                  </a>
                 </li>
 
                 <li class="breadcrumb-item active" style="color: black">
-                  Informasi
-                </li>
-                <li class="breadcrumb-item active" style="color: black">
-                  Berita
+                  Potensi Desa
                 </li>
               </ol>
             </nav>
@@ -211,123 +222,138 @@
         </div>
       </div>
     </section>
-
-    <section class="berita my-5">
+    <section class="header-perangkat-desa">
       <div class="container">
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/voly.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/lomba-kegiatan-gerakan-penangganan-stunting-tk-"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Main Volly Dulu
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">rabu, 21 September 2022</p>
-                </div>
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  para warga desa bumi sejahtera sdang bermain volly
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
-            </div>
-          </div>
+        <div class="row">
+          <h1 class="text-center display-4 m-5">Perangkat Desa</h1>
         </div>
-
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/blt.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/pembagian-blt"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Pembagian BLT
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">Tuesday, 21 Juni 2021</p>
+      </div>
+    </section>
+    <section class="potensi-penduduk mb-100">
+      <div class="main mb-xlg">
+        <div class="container">
+          <div class="row m-5">
+            <div class="col-md-12">
+              <div class="row mt-xl">
+                <div class="col-md-6 col-lg-4">
+                  <div class="panel panel-primary">
+                    <div class="panel-heading">
+                      <h5 class="panel-title text-center pt-none">
+                        Jumlah Penduduk
+                      </h5>
+                    </div>
+                    <div class="panel-body">
+                      <h3 class="text-center mb-none">1322 Jiwa</h3>
+                    </div>
+                  </div>
                 </div>
-
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  Pelaksanaan kegiatan pembagian BLT dari dana Desa bumi
-                  sejahtera
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
+                <div class="col-md-6 col-lg-4">
+                  <div class="panel panel-info">
+                    <div class="panel-heading">
+                      <h5 class="panel-title text-center pt-none">Laki-Laki</h5>
+                    </div>
+                    <div class="panel-body">
+                      <h3 class="text-center mb-none">700 Jiwa</h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                  <div class="panel panel-danger">
+                    <div class="panel-heading">
+                      <h5 class="panel-title text-center pt-none">Perempuan</h5>
+                    </div>
+                    <div class="panel-body">
+                      <h3 class="text-center mb-none">622 Jiwa</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2 bordered p-xl mt-xl">
+                  <div id="chart_kependudukan"></div>
+                </div>
+              </div>
+              <div class="row mt-xl">
+                <div class="col-md-6 col-lg-5 col-lg-offset-1">
+                  <div class="panel panel-success">
+                    <div class="panel-heading">
+                      <h5 class="panel-title text-center pt-none">
+                        Jumlah Kepala Keluarga
+                      </h5>
+                    </div>
+                    <div class="panel-body">
+                      <h3 class="text-center mb-none">392 KK</h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-5">
+                  <div class="panel panel-success">
+                    <div class="panel-heading">
+                      <h5 class="panel-title text-center pt-none">
+                        Kepadatan Penduduk
+                      </h5>
+                    </div>
+                    <div class="panel-body">
+                      <h3 class="text-center mb-none"></h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <script type="text/javascript">
+                $(document).ready(function () {
+                  const chart = new Highcharts.Chart({
+                    credits: {
+                      enabled: false,
+                    },
+                    chart: {
+                      renderTo: "chart_kependudukan",
+                      type: "column",
+                      options3d: {
+                        enabled: true,
+                        alpha: 5,
+                        beta: 5,
+                        depth: 50,
+                        viewDistance: 25,
+                      },
+                    },
+                    xAxis: {
+                      categories: ["Laki-Laki", "Perempuan", "Total"],
+                    },
+                    yAxis: {
+                      title: {
+                        enabled: false,
+                      },
+                    },
+                    tooltip: {
+                      headerFormat: "<b>{point.key}</b><br>",
+                      pointFormat: "Jumlah: {point.y}",
+                    },
+                    title: {
+                      text: "Jumlah Penduduk",
+                    },
+                    legend: {
+                      enabled: false,
+                    },
+                    plotOptions: {
+                      column: {
+                        depth: 25,
+                      },
+                    },
+                    series: [
+                      {
+                        data: [700, 622, 1322],
+                        colorByPoint: true,
+                      },
+                    ],
+                  });
+                });
+              </script>
             </div>
           </div>
         </div>
       </div>
+      <script src="https://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/highcharts-3d.js"></script>
     </section>
     <footer class="footer-akhir p-3">
       <div class="container">
@@ -386,6 +412,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="jquery.isotope.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
