--- a/visi-misi.html
+++ b/visi-misi.html
@@ -24,7 +24,16 @@
       class="navbar navbar-expand-lg navbar-light bg-transparent position-fixed w-100"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Desa Bumi Sejahtera</a>
+        <a class="navbar-brand" href="#">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/3/37/Coat_of_Arms_of_Regency_Kutai_Timur.png"
+            alt="Logo"
+            width="28"
+            class="d-inline-block align-text-top"
+          />
+          Desa Bumi Sejahtera</a
+        >
+
         <button
           class="navbar-toggler"
           type="button"
@@ -38,14 +47,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-2">
-              <a class="nav-link active" aria-current="page" href="#beranda"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Sejarah</a>
-            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -57,21 +58,115 @@
                 Profil
               </a>
               <ul class="dropdown-menu mx-2">
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li>
+                  <a class="dropdown-item" href="tentang.html">Tentang Desa</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="sejarah.html">Sejarah desa</a>
+                </li>
                 <li>
                   <a class="dropdown-item" href="visi-misi.html">Visi & Misi</a>
                 </li>
-                <li><hr class="dropdown-divider" /></li>
+
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="wilayah-desa.html"
+                    >Wilayah Desa</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Pemerintahan
+              </a>
+              <ul class="dropdown-menu mx-2">
+                <li>
+                  <a class="dropdown-item" href="stuktur.html"
+                    >Stuktur Organisasi</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="perangkat.html"
+                    >Perangkat desa</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="lembaga.html">Lembaga desa</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Informasi
+              </a>
+              <ul class="dropdown-menu mx-2">
+                <li>
+                  <a class="dropdown-item" href="berita.html">Berita</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="pengumuman.html">Pengumuman</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="agenda.html"
+                    >Agenda Kegiatan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="galeri.html">Galeri</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="download.html">Download</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="apbdesa.html">APBDesa</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Potensi Desa
+              </a>
+              <ul class="dropdown-menu mx-2">
+                <li>
+                  <a class="dropdown-item" href="potensi-penduduk.html"
+                    >Potensi Penduduk</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="perangkat.html"
+                    >Potensi Wilayah</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="sarana.html"
+                    >Sarana & Prasarana</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Galeri</a>
+              <a class="nav-link" href="layanan.html">Layanan</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Lokasi</a>
+              <a class="nav-link" href="produk.html">Produk Hukum</a>
             </li>
           </ul>
         </div>
