--- a/wilayah-desa.html
+++ b/wilayah-desa.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+
+    <link rel="stylesheet" href="owl.theme.default.css" />
+    <link rel="stylesheet" href="owl.carousel.min.css" />
+    <link rel="stylesheet" href="aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -18,6 +22,7 @@
 
     <title>Website Desa Bumi Sejahtera</title>
   </head>
+
   <body>
     <!--navbar-->
     <nav
@@ -187,7 +192,7 @@
             class="text-bannner"
             style="position: absolute; display: block; top: 20%; color: black"
           >
-            <h1 style="font-weight: bold">Berita Desa</h1>
+            <h1 style="font-weight: bold">Profil</h1>
             <nav>
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -198,12 +203,13 @@
                     ><i class="fa fa-home"></i
                   ></a>
                 </li>
-
-                <li class="breadcrumb-item active" style="color: black">
-                  Informasi
+                <li class="breadcrumb-item" aria-current="page">
+                  <a href="" class="text-decoration-none" style="color: black"
+                    >Profil</a
+                  >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Berita
+                  Pemerintahan
                 </li>
               </ol>
             </nav>
@@ -212,123 +218,76 @@
       </div>
     </section>
 
-    <section class="berita my-5">
+    <section class="mx-auto">
       <div class="container">
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/voly.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/lomba-kegiatan-gerakan-penangganan-stunting-tk-"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Main Volly Dulu
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">rabu, 21 September 2022</p>
-                </div>
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  para warga desa bumi sejahtera sdang bermain volly
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
-            </div>
-          </div>
-        </div>
+        <div class="row">
+          <div class="col-md-9 mx-auto">
+            <div class="row content-artikel p-2">
+              <h1 class="judul-berita text-center" style="font-weight: 700">
+                WILAYAH DESA
+              </h1>
+              <img
+                src="img/foto2.jpg"
+                class="img-fluid"
+                style="border-radius: 3%"
+              />
+              <p class="isi-artikel"></p>
+              <p><strong>Letak Geografis&nbsp;&nbsp;&nbsp; </strong></p>
 
-        <div
-          class="row my-4 justify-content-center"
-          style="
-            box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.1);
-            background-color: white;
-            border-radius: 8px;
-          "
-          data-aos="fade-up"
-          data-aos-duration="500"
-        >
-          <div class="col-md-4 m-auto text-center">
-            <img
-              data-aos="fade-up"
-              data-aos-duration="600"
-              src="img/blt.jpeg"
-              class="img-fluid"
-              style="border-radius: 7px"
-            />
-          </div>
-          <div class="col-md-8 my-5">
-            <div class="container">
-              <a
-                class="text-decoration-none"
-                href="berita/pembagian-blt"
-                style="color: black"
-              >
-                <h2
-                  class="judul-berita"
-                  data-aos="fade-up"
-                  data-aos-duration="800"
-                  style="font-weight: bold"
-                >
-                  Pembagian BLT
-                </h2>
-                <div
-                  class="d-flex text-dark text-muted"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <p class="text-muted">Tuesday, 21 Juni 2021</p>
-                </div>
+              <p>
+                Secara geografis Desa Bumi Sejahtera merupakan wilayah bagian
+                dari Kecamatan Kaliorang . Kabupaten Kutai Timur dan merupakan
+                daerah dataran rendah dengan batas-batas wilayah sebagai berikut
+                :
+              </p>
 
-                <p data-aos="fade-up" data-aos-duration="1200">
-                  Pelaksanaan kegiatan pembagian BLT dari dana Desa bumi
-                  sejahtera
-                </p>
-                <p
-                  class="text-muted selengkapnya"
-                  data-aos="fade-up"
-                  data-aos-duration="1400"
-                >
-                  Selengkapnya<i class="fas fa-angle-right p-2"></i>
-                </p>
-              </a>
+              <ul>
+                <li>
+                  Sebelah Utara : Desa Benua Baru ILIR, Kecamatan Sangkulirang
+                </li>
+                <li>Sebelah Selatan : Desa Kaliorang, Kalorang</li>
+                <li>
+                  Sebelah Barat : Desa Citra Manunggal Jaya, Kecamatan Kalioran
+                </li>
+                <li>Sebelah Timur : Desa Maloy, Kecamatan Sangkulirang</li>
+              </ul>
+
+              <p>&nbsp;</p>
+
+              <p><strong>Topografi</strong></p>
+
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                eos numquam error in, et deserunt odio assumenda qui maiores
+                omnis, obcaecati suscipit sapiente. Perferendis, animi enim
+                quasi deserunt hic consectetur!
+              </p>
+
+              <p><strong>Iklim</strong></p>
+
+              <p>
+                Ketinggian dari atas permukaan laut wilayah terendah berupa
+                lembah adalah +400 m, dan tertinggi +500 m berupa bukit. Suhu
+                rata-rata adalah 30?C &ndash; 32?C, dan memiliki kadar curah
+                hujan yang sedang. Secara umum sepanjang tahun mengalami dua
+                musim yaitu musim hujan dan musim kemarau.
+              </p>
+
+              <p><strong>Orbitasi </strong></p>
+
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Laudantium velit nisi fuga pariatur, quas dolores veniam
+                deserunt minima molestiae dolorem quis delectus, alias non
+                inventore exercitationem laboriosam similique? Earum,
+                blanditiis!
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
