--- a/potensi-penduduk.html
+++ b/potensi-penduduk.html
@@ -6,15 +6,12 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="owl.theme.default.css" />
+    <link rel="stylesheet" href="boot.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="http://bukitmakmur-kotim.desa.id/themes/default/assets/plugins/bootstrap/css/bootstrap.min.css"
     />
 
     <!-- Load jQuery -->
@@ -225,7 +222,7 @@
     <section class="header-perangkat-desa">
       <div class="container">
         <div class="row">
-          <h1 class="text-center display-4 m-5">Perangkat Desa</h1>
+          <h1 class="text-center display-4 m-5">Potensi Penduduk</h1>
         </div>
       </div>
     </section>
